--- a/documento/bibliography.bib
+++ b/documento/bibliography.bib
@@ -80,3 +80,266 @@
   howpublished = {\url{https://www.promptingguide.ai/es/techniques}},
   note         = {Consultado: 2024-05-20}
 }
+
+
+@misc{jobswift2024,
+  title        = {Resume Matching Algorithms: How They Work},
+  author       = {JobSwift},
+  year         = {2024},
+  howpublished = {\url{https://jobswift.ai/blog/resume-matching-algorithms-how-they-work}},
+  note         = {Consultado: 2024-11-21}
+}
+
+@misc{resumemate2025,
+  title        = {Tables, Columns \& Text Boxes: Do They Break ATS? Safer Layouts},
+  author       = {ResumeMate},
+  year         = {2025},
+  howpublished = {\url{https://www.resumemate.io/blog/tables-columns-text-boxes-do-they-break-ats-safer-layouts/}},
+  note         = {Consultado: 2025-11-21}
+}
+
+@misc{upskillist2024,
+  title        = {ATS Parsing: Common Resume Mistakes to Avoid},
+  author       = {Upskillist},
+  year         = {2024},
+  howpublished = {\url{https://www.upskillist.com/blog/ats-parsing-common-resume-mistakes-to-avoid/}},
+  note         = {Consultado: 2025-11-21}
+}
+
+@misc{jobscan2024,
+  title        = {Can ATS Read Tables and Columns on a Resume?},
+  author       = {Jobscan},
+  year         = {2024},
+  howpublished = {\url{https://www.jobscan.co/blog/resume-tables-columns-ats/}},
+  note         = {Consultado: 2025-11-21}
+}
+
+@misc{omdena2021,
+  title        = {Resume Parsing with Natural Language Processing},
+  author       = {Omdena},
+  year         = {2021},
+  howpublished = {\url{https://omdena.com/blog/resume-parsing-with-nlp/}},
+  note         = {Consultado: 2025-11-21}
+}
+
+@article{maheshwari2020survey,
+  title={A Survey on Resume Parsing Techniques},
+  author={Maheshwari, S. and Jain, P.},
+  journal={International Journal of Engineering Research \& Technology (IJERT)},
+  volume={9},
+  number={04},
+  year={2020}
+}
+
+@misc{geeksforgeeks2024,
+  title        = {Project - How to Build a Resume Parser Using Python},
+  author       = {GeeksforGeeks},
+  year         = {2024},
+  howpublished = {\url{https://www.geeksforgeeks.org/nlp/project-how-to-build-a-resume-parser-using-python/}},
+  note         = {Consultado: 2025-11-21}
+}
+
+@misc{affinda2025,
+  title        = {What is Resume Parsing? (The Definitive Guide)},
+  author       = {Affinda},
+  year         = {2025},
+  howpublished = {\url{https://www.affinda.com/blog/what-is-resume-parsing}},
+  note         = {Consultado: 2025-11-21}
+}
+
+@misc{pinecone2025,
+  title        = {Sentence Embeddings for Semantic Search},
+  author       = {Pinecone},
+  year         = {2025},
+  howpublished = {\url{https://www.pinecone.io/learn/series/nlp/sentence-embeddings/}},
+  note         = {Consultado: 2025-11-21}
+}
+
+@misc{edenai2024,
+  title        = {Resume Parsing with Large Language Models (LLMs)},
+  author       = {Eden AI},
+  year         = {2024},
+  howpublished = {\url{https://www.edenai.co/blog/resume-parsing-with-llms}},
+  note         = {Consultado: 2025-11-21}
+}
+
+@article{mikolov2013word2vec,
+  title   = {Efficient Estimation of Word Representations in Vector Space},
+  author  = {Mikolov, Tomas and Chen, Kai and Corrado, Greg and Dean, Jeffrey},
+  journal = {arXiv preprint arXiv:1301.3781},
+  year    = {2013}
+}
+
+@misc{fastapi,
+  title        = {FastAPI},
+  author       = {Sebastián Ramírez},
+  howpublished = {\url{https://fastapi.tiangolo.com/}},
+  year         = {2019}
+}
+
+@book{jurafsky2023speech,
+  title     = {Speech and Language Processing: An Introduction to Natural Language Processing, Computational Linguistics, and Speech Recognition},
+  author    = {Jurafsky, Dan and Martin, James H.},
+  year      = {2023},
+  publisher = {Pearson},
+  edition   = {3rd}
+}
+
+@article{ricci2011introduction,
+  title     = {Introduction to Recommender Systems Handbook},
+  author    = {Ricci, Francesco and Rokach, Lior and Shapira, Bracha},
+  journal   = {Recommender Systems Handbook},
+  pages     = {1--35},
+  year      = {2011},
+  publisher = {Springer}
+}
+
+@misc{langchain,
+  title        = {LangChain},
+  author       = {LangChain AI},
+  howpublished = {\url{https://www.langchain.com/}},
+  year         = {2022}
+}
+
+@misc{react,
+  title        = {React - A JavaScript library for building user interfaces},
+  author       = {Meta},
+  howpublished = {\url{https://react.dev/}},
+  year         = {2013}
+}
+
+@article{brown2020language,
+  title={Language models are few-shot learners},
+  author={Brown, Tom and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared D and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and others},
+  journal={Advances in neural information processing systems},
+  volume={33},
+  pages={1877--1901},
+  year={2020},
+  url={https://proceedings.neurips.cc/paper/2020/file/1457c0d6bfcb4967418bfb8ac142f64a-Paper.pdf}
+}
+
+@article{liu2023pre,
+  title={Pre-train, prompt, and predict: A systematic survey of prompting methods in natural language processing},
+  author={Liu, Pengfei and Yuan, Weizhe and Fu, Jinlan and Jiang, Zhengbao and Hayashi, Hiroaki and Neubig, Graham},
+  journal={ACM Computing Surveys},
+  volume={55},
+  number={9},
+  pages={1--35},
+  year={2023},
+  publisher={ACM New York, NY},
+  url={https://dl.acm.org/doi/abs/10.1145/3560815}
+}
+
+@article{white2023prompt,
+  title={A prompt pattern catalog to enhance prompt engineering with chatgpt},
+  author={White, Jules and Fu, Quchen and Hays, Sam and Sandborn, Michael and Olea, Carlos and Gilbert, Henry and Elnashar, Ashraf and Spencer-Smith, Jesse and Schmidt, Douglas C},
+  journal={arXiv preprint arXiv:2302.11382},
+  year={2023},
+  url={https://arxiv.org/abs/2302.11382}
+}
+
+@misc{promptguide2024,
+  title        = {Técnicas de Prompting | Prompt Engineering Guide},
+  author       = {DAIR.AI},
+  year         = {2024},
+  howpublished = {\url{https://www.promptingguide.ai/es/techniques}},
+  note         = {Consultado: 2024-05-20}
+}
+
+
+@misc{jobswift2024,
+  title        = {Resume Matching Algorithms: How They Work},
+  author       = {JobSwift},
+  year         = {2024},
+  howpublished = {\url{https://jobswift.ai/blog/resume-matching-algorithms-how-they-work}},
+  note         = {Consultado: 2024-11-21}
+}
+
+@misc{resumemate2025,
+  title        = {Tables, Columns \& Text Boxes: Do They Break ATS? Safer Layouts},
+  author       = {ResumeMate},
+  year         = {2025},
+  howpublished = {\url{https://www.resumemate.io/blog/tables-columns-text-boxes-do-they-break-ats-safer-layouts/}},
+  note         = {Consultado: 2025-11-21}
+}
+
+@misc{upskillist2024,
+  title        = {ATS Parsing: Common Resume Mistakes to Avoid},
+  author       = {Upskillist},
+  year         = {2024},
+  howpublished = {\url{https://www.upskillist.com/blog/ats-parsing-common-resume-mistakes-to-avoid/}},
+  note         = {Consultado: 2025-11-21}
+}
+
+@misc{jobscan2024,
+  title        = {Can ATS Read Tables and Columns on a Resume?},
+  author       = {Jobscan},
+  year         = {2024},
+  howpublished = {\url{https://www.jobscan.co/blog/resume-tables-columns-ats/}},
+  note         = {Consultado: 2025-11-21}
+}
+
+@misc{omdena2021,
+  title        = {Resume Parsing with Natural Language Processing},
+  author       = {Omdena},
+  year         = {2021},
+  howpublished = {\url{https://omdena.com/blog/resume-parsing-with-nlp/}},
+  note         = {Consultado: 2025-11-21}
+}
+
+@article{maheshwari2020survey,
+  title={A Survey on Resume Parsing Techniques},
+  author={Maheshwari, S. and Jain, P.},
+  journal={International Journal of Engineering Research \& Technology (IJERT)},
+  volume={9},
+  number={04},
+  year={2020}
+}
+
+@misc{geeksforgeeks2024,
+  title        = {Project - How to Build a Resume Parser Using Python},
+  author       = {GeeksforGeeks},
+  year         = {2024},
+  howpublished = {\url{https://www.geeksforgeeks.org/nlp/project-how-to-build-a-resume-parser-using-python/}},
+  note         = {Consultado: 2025-11-21}
+}
+
+@misc{affinda2025,
+  title        = {What is Resume Parsing? (The Definitive Guide)},
+  author       = {Affinda},
+  year         = {2025},
+  howpublished = {\url{https://www.affinda.com/blog/what-is-resume-parsing}},
+  note         = {Consultado: 2025-11-21}
+}
+
+@misc{pinecone2025,
+  title        = {Sentence Embeddings for Semantic Search},
+  author       = {Pinecone},
+  year         = {2025},
+  howpublished = {\url{https://www.pinecone.io/learn/series/nlp/sentence-embeddings/}},
+  note         = {Consultado: 2025-11-21}
+}
+
+@misc{edenai2024,
+  title        = {Resume Parsing with Large Language Models (LLMs)},
+  author       = {Eden AI},
+  year         = {2024},
+  howpublished = {\url{https://www.edenai.co/blog/resume-parsing-with-llms}},
+  note         = {Consultado: 2025-11-21}
+}
+
+@misc{deepai2025,
+  title        = {F-Score},
+  author       = {DeepAI},
+  year         = {2025},
+  howpublished = {\url{https://deepai.org/machine-learning-glossary-and-terms/f-score}},
+  note         = {Consultado: 2025-11-21}
+}
+
+@misc{pinecone_eval2025,
+  title        = {Offline Evaluation for Recommender Systems},
+  author       = {Pinecone},
+  year         = {2025},
+  howpublished = {\url{https://www.pinecone.io/learn/offline-evaluation/}},
+  note         = {Consultado: 2025-11-21}
+}
