--- a/documento/main.tex
+++ b/documento/main.tex
@@ -6,6 +6,8 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[spanish,es-nodecimaldot]{babel}
+\usepackage{wrapfig}
+\usepackage{caption}
 \usepackage{csquotes}
 \usepackage{setspace}
 \usepackage{geometry}
