cambios recomendaciones Ruben

--- a/documento/appendices/B-prompts.tex
+++ b/documento/appendices/B-prompts.tex
@@ -122,13 +122,13 @@ Este apéndice documenta los prompts completos utilizados en el sistema para la 
 
 
 
-\subsection*{Prompts de Inferencia Cognitiva para descripciones }
+\subsection*{Prompts de inferencia para descripciones }
 
 Estos prompts se activan automáticamente solo cuando la extracción directa no encuentra información.
 
 \begin{table}[H]
   \centering
-  \caption{Prompts de fallback para inferencia cognitiva}
+  \caption{Prompts de fallback para inferencia}
   \label{tab:prompts-job-fallback}
   \scriptsize
   \begin{tabular}{@{}lp{10cm}@{}}
