Revisión Marco Teorico

--- a/documento/bibliography.bib
+++ b/documento/bibliography.bib
@@ -215,3 +215,146 @@
   howpublished = {\url{https://factorhuma.org/attachments/article/15153/sesgos-cognitivos-en-la-gestion-cast.pdf}},
   year = {2021}
 }
+@incollection{chowdhary2020,
+  title = {Natural Language Processing},
+  author = {Chowdhary, K. R.},
+  booktitle = {Fundamentals of Artificial Intelligence},
+  pages = {603--649},
+  year = {2020},
+  publisher = {Springer},
+  url = {https://link.springer.com/chapter/10.1007/978-81-322-3972-7_19}
+}
+
+@article{vijayarani2015,
+  title = {Preprocessing Techniques for Text Mining - An Overview},
+  author = {Vijayarani, S. and Ilamathi, J. and Nithya, M.},
+  journal = {International Journal of Computer Science & Communication Networks},
+  volume = {5},
+  number = {1},
+  pages = {7--16},
+  year = {2015},
+  url = {https://www.researchgate.net/publication/282444200_Preprocessing_Techniques_for_Text_Mining_-_An_Overview}
+}
+
+@inproceedings{sculley2015,
+  title = {Hidden technical debt in machine learning systems},
+  author = {Sculley, David and Holt, Gary and Golovin, Daniel and Davydov, Eugene and Phillips, Todd and Ebner, Dietmar and Chaudhary, Vinay and Young, Michael and Crespo, Jean-Francois and Dennison, Dan},
+  booktitle = {Advances in Neural Information Processing Systems},
+  volume = {28},
+  pages = {2503--2511},
+  year = {2015},
+  url = {https://proceedings.neurips.cc/paper_files/paper/2015/file/86df7dcfd896fcaf2674f757a2463eba-Paper.pdf}
+}
+
+@article{white2023,
+  title = {A Prompt Pattern Catalog to Enhance Prompt Engineering with ChatGPT},
+  author = {White, Jules and Fu, Quchen and Hays, Sam and Sandborn, Michael and Olea, Carlos and Gilbert, Henry and Elnashar, Ashraf and Spencer-Smith, Jesse and Schmidt, Douglas C.},
+  journal = {arXiv preprint arXiv:2302.11382},
+  year = {2023},
+  url = {https://arxiv.org/abs/2302.11382}
+}
+
+@article{zhao2023,
+  title = {A Survey of Large Language Models},
+  author = {Zhao, Wayne Xin and Zhou, Kun and Li, Junyi and Tang, Tianyi and Wang, Xiaolei and Hou, Yupeng and Min, Yingqian and Zhang, Beichen and Zhang, Junjie and Dong, Zican and others},
+  journal = {arXiv preprint arXiv:2303.18223},
+  year = {2023},
+  url = {https://arxiv.org/abs/2303.18223}
+}
+
+@article{openai2023,
+  title = {GPT-4 Technical Report},
+  author = {OpenAI},
+  journal = {arXiv preprint arXiv:2303.08774},
+  year = {2023},
+  url = {https://arxiv.org/abs/2303.08774}
+}
+
+@inproceedings{brown2020,
+  title = {Language Models are Few-Shot Learners},
+  author = {Brown, Tom and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda},
+  booktitle = {Advances in Neural Information Processing Systems (NeurIPS)},
+  volume = {33},
+  pages = {1877--1901},
+  year = {2020},
+  publisher = {Curran Associates, Inc.},
+  url = {https://proceedings.neurips.cc/paper/2020/file/1457c0d6bfcb4967418bfb8ac142f64a-Paper.pdf}
+}
+
+@inproceedings{vaswani2017,
+  title = {Attention is All You Need},
+  author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
+  booktitle = {Advances in Neural Information Processing Systems (NIPS)},
+  volume = {30},
+  pages = {5998--6008},
+  year = {2017},
+  publisher = {Curran Associates, Inc.},
+  url = {https://proceedings.neurips.cc/paper_files/paper/2017/file/3f5ee243547dee91fbd053c1c4a845aa-Paper.pdf}
+}
+
+@article{liu2023,
+  title = {Pre-train, Prompt, and Predict: A Systematic Survey of Prompting Methods in Natural Language Processing},
+  author = {Liu, Pengfei and Yuan, Weizhe and Fu, Jinlan and Jiang, Zhengbao and Hayashi, Hiroaki and Neubig, Graham},
+  journal = {ACM Computing Surveys},
+  volume = {55},
+  number = {9},
+  pages = {1--35},
+  year = {2023},
+  publisher = {Association for Computing Machinery},
+  url = {https://dl.acm.org/doi/10.1145/3560815}
+}
+
+@book{jurafsky2024,
+  title = {Speech and Language Processing},
+  author = {Jurafsky, Daniel and Martin, James H.},
+  edition = {3rd draft},
+  year = {2024},
+  publisher = {Pearson},
+  url = {https://web.stanford.edu/~jurafsky/slp3/}
+}
+
+@inproceedings{kojima2022,
+  title = {Large Language Models are Zero-Shot Reasoners},
+  author = {Kojima, Takeshi and Gu, Shixiang Shane and Reid, Machel and Matsuo, Yutaka and Iwasawa, Yusuke},
+  booktitle = {Advances in Neural Information Processing Systems (NeurIPS)},
+  volume = {35},
+  pages = {22199--22213},
+  year = {2022},
+  publisher = {Curran Associates, Inc.},
+  url = {https://proceedings.neurips.cc/paper_files/paper/2022/file/8bb0d291acd4acf06ef1177450148f0f-Paper-Conference.pdf}
+}
+
+@manual{langchain2022,
+  title = {LangChain: Building applications with LLMs through composability},
+  author = {Chase, Harrison},
+  year = {2022},
+  note = {Software library version 0.0.267},
+  url = {https://github.com/langchain-ai/langchain}
+}
+
+@book{buschmann1996,
+  title={Pattern-Oriented Software Architecture, Volume 1: A System of Patterns},
+  author={Buschmann, Frank and Meunier, Regine and Rohnert, Hans and Sommerlad, Peter and Stal, Michael},
+  year={1996},
+  publisher={John Wiley \& Sons},
+  address={Chichester},
+  isbn={978-0471958697}
+}
+
+@book{fowler2002,
+  title={Patterns of Enterprise Application Architecture},
+  author={Fowler, Martin},
+  year={2002},
+  publisher={Addison-Wesley Professional},
+  address={Boston},
+  isbn={978-0321127426}
+}
+
+@book{evans2003,
+  title={Domain-Driven Design: Tackling Complexity in the Heart of Software},
+  author={Evans, Eric},
+  year={2003},
+  publisher={Addison-Wesley Professional},
+  address={Boston},
+  isbn={978-0321125217}
+}
