--- a/documento/appendices/A-figuras-aplicacion.tex
+++ b/documento/appendices/A-figuras-aplicacion.tex
@@ -194,5 +194,5 @@
     \centering
     \includegraphics[width=0.5\linewidth]{Vista_Descripcion_Detalles_Requisitos.png}
     \caption{Interfaz: Vista de los requisitos de una descripción}
-    \label{fig:placeholder}
+    \label{fig:ui-job-requisitos}
 \end{figure}
