--- a/documento/main.tex
+++ b/documento/main.tex
@@ -59,7 +59,7 @@
 
 \chapter*{Resumen}
 
-La gestión eficiente del talento es un desafío crítico, especialmente en el sector tecnológico donde la revisión manual de hojas de vida se convierte en un cuello de botella. Esta tesis presenta el desarrollo y evaluación de un sistema de recomendación de talento basado en Grandes Modelos de Lenguaje (LLMs) diseñado para optimizar el primer filtro de selección. El sistema utiliza técnicas de \textit{prompt engineering} con modelos GPT para estructurar información de hojas de vida en formato PDF y descripciones de trabajo, permitiendo una comparación semántica profunda en ocho aspectos clave, incluyendo experiencia, habilidades técnicas y educación.
+La gestión eficiente del talento es un desafío crítico, especialmente en el sector tecnológico donde la revisión manual de hojas de vida se convierte en un cuello de botella. Esta tesis presenta el desarrollo y evaluación de un sistema de recomendación de talento basado en Grandes Modelos de Lenguaje (LLMs) diseñado para optimizar el primer filtro de selección. El sistema utiliza técnicas de prompt engineering con modelos GPT para estructurar información de hojas de vida en formato PDF y descripciones de trabajo, permitiendo una comparación semántica profunda en ocho aspectos clave, incluyendo experiencia, habilidades técnicas y educación.
 
 La metodología de evaluación consistió en dos fases experimentales utilizando un conjunto de datos controlado de 10 hojas de vida y 4 vacantes reales del sector TI. Primero, se validó la calidad de la estructuración de datos, alcanzando una precisión superior al 90\% en la extracción de información. Posteriormente, se contrastó el desempeño del motor de recomendación frente al criterio de un experto en Recursos Humanos mediante cuatro escenarios de selección simulados.
 
